--- a/index.html
+++ b/index.html
@@ -16,79 +16,92 @@
 </head>
 
 <body>
-  <header>
-    <h1>10,000+ of our users love our products.</h1>
+  <section class="social-section">
+    <section class="top-container">
+      <header>
+        <h1>10,000+ of our users love our products.</h1>
 
-    <p>We only provide great products combined with excellent customer service.
-      See what our satisfied customers are saying about our services.
-    </p>
-  </header>
-  <section class="star-container">
-    <section class="stars">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <p>Rated 5 Stars in Reviews</p>
+        <p>We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.
+        </p>
+      </header>
+
+      <section class="star-container">
+        <section class="stars-1 stars">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <p>Rated 5 Stars in Reviews</p>
+        </section>
+
+        <section class="stars-2 stars">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <p>Rated 5 Stars in Report Guru</p>
+        </section>
+
+        <section class="stars-3 stars">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <img src="./images/icon-star.svg" alt="Star">
+          <p>5 Stars in BestTech</p>
+        </section>
+      </section>
     </section>
 
-    <section class="stars">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <p>Rated 5 Stars in Report Guru</p>
-    </section>
+    <section class="testimonial-container">
+      <section class="testimonial">
+        <section class="testimonial-top">
+          <img src="./images/image-colton.jpg" alt="Colton Smith">
+          <section class="testimonial-title">
+            <h4>Colton Smith</h4>
+            <h5>Verified Buyer</h5>
+          </section>
+        </section>
+        <p>"We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"</p>
+      </section>
 
-    <section class="stars">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <img src="./images/icon-star.svg" alt="Star">
-      <p>5 Stars in BestTech</p>
+      <section class="testimonial testimonial-2">
+        <section class="testimonial-top">
+          <img src="./images/image-irene.jpg" alt="Irene Roberts">
+          <section class="testimonial-title">
+            <h4>Irene Roberts</h4>
+            <h5>Verified Buyer</h5>
+          </section>
+        </section>
+        <p>"Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."</p>
+      </section>
+
+      <section class="testimonial testimonial-3">
+        <section class="testimonial-top">
+          <img src="./images/image-anne.jpg" alt="Anne Wallace">
+          <section class="testimonial-title">
+            <h4>Anne Wallace</h4>
+            <h5>Verified Buyer</h5>
+          </section>
+        </section>
+        <p>"Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"</p>
+      </section>
     </section>
   </section>
 
-  <section class="testimonial-container">
-    <section class="testimonial">
-      <img src="./images/image-colton.jpg" alt="Colton Smith">
-      <h4>Colton Smith</h4>
-      <h5>Verified Buyer</h5>
-      <p>"We needed the same printed design as the one we had ordered a week prior.
-        Not only did they find the original order, but we also received it in time.
-        Excellent!"</p>
-    </section>
-  </section>
 
-  <section class="testimonial-container">
-    <section class="testimonial">
-      <img src="./images/image-irene.jpg" alt="Irene Roberts">
-      <h4>Irene Roberts</h4>
-      <h5>Verified Buyer</h5>
-      <p>"Customer service is always excellent and very quick turn around. Completely
-        delighted with the simplicity of the purchase and the speed of delivery."</p>
-    </section>
-  </section>
-  <section class="testimonial-container">
-    <section class="testimonial">
-      <img src="./images/image-anne.jpg" alt="Anne Wallace">
-      <h4>Anne Wallace</h4>
-      <h5>Verified Buyer</h5>
-      <p>"Put an order with this company and can only praise them for the very high
-        standard. Will definitely use them again and recommend them to everyone!"</p>
-    </section>
-  </section>
-  </section>
-
-
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
       href="#">Rohan</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
